<resources>
    <string name="app_name">Predict 19</string>
    <string name="title_home">Home</string>
    <string name="title_prediction">Predict</string>
    <string name="title_help">Help</string>
    <string name="title_account">Account</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="label_sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_or">OR</string>
    <string name="label_login_google">Sign In with Google</string>
    <string name="label_register_button">
        <font color="#000000">Don\u0027t have account?</font>
        <font color="#00ADB5">Get started here</font>
    </string>
    <string name="label_register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="label_have_account_button">
        <font color="#000000">Already have account?</font>
        <font color="#00ADB5">Login here</font>
    </string>
    <string name="hint_re_password">Re-Type Password</string>
    <string name="label_agreement"><u>I Accept the User Agreement</u></string>
    <string name="request_canceled">Request Cancel</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="login_successful">Login Successful</string>
    <string name="label_select_date">Select Date</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="label_sub_welcome">Always take care of your health</string>
    <string name="notif_verify_email">Verify Your Email</string>
    <string name="notif_pass_less_than_eight">Password Must at Least 8 Character</string>
    <string name="notif_pass_empty">Password Cannot Empty</string>
    <string name="notif_email_invalid">Invalid Email Format</string>
    <string name="notif_email_empty">Email Cannot Empty</string>
    <string name="notif_name_empty">Name Cannot Empty</string>
    <string name="notif_date_birth_empty">Date Birth Cannot Empty</string>
    <string name="notif_image_profile_not_picked">You Must Pick Profile Image</string>
    <string name="notif_re_pass_not_same">Re-Password Must Same as Password</string>
    <string name="notif_agreement_not_checked">Agreement Must be Checked</string>
    <string name="notif_account_created">Account Created</string>
    <string name="notif_account_created_fail">Account Creation Failed.</string>
    <string name="notif_register_success">Successful Registration</string>
    <string name="notif_email_verify_send">Registration Successful, Verification Email Sent!</string>
    <string name="notif_email_verify_unsend">Undeliverable Verification Email!</string>
    <string name="notif_permission">Please accept for required permissions</string>
    <string name="label_logout">Logout</string>
    <string name="label_age">Age</string>
    <string name="label_information">Information</string>
    <string name="label_edit">Edit</string>
    <string name="label_welcome">Welcome to</string>
    <string name="notif_user_not_found">User Information Not Found</string>
    <string name="label_age_home">Years Old</string>
    <string name="label_no_percent_predict">0%</string>
    <string name="label_account_info">Account Info</string>
    <string name="label_welcome_name">Hai, Name</string>
    <string name="label_greeting">Hai,</string>
    <string name="label_choose_image">Choose</string>
    <string name="label_image_file">Name Image</string>
    <string name="label_version_app">Version Name</string>
    <string name="label_version">Version</string>
    <string name="label_select_image">Select Image</string>
    <string name="label_camera">Camera</string>
    <string name="label_selected_image">Your Selected Image</string>
    <string name="label_checked_at">Checked At</string>
    <string name="label_no_data">-</string>
    <string name="label_covid_status">Covid Status</string>
    <string name="text_oxygen_predict_statement">Oxygen predictions stated</string>
    <string name="text_time_predict_statement">so that the estimated time is only in</string>
    <string name="no_predict_data">No Predict Data</string>
    <string name="label_oxygen_prediction">Oxygen Prediction</string>
    <string name="notif_reqired_permission">Please Accept for Required Permissions</string>
    <string name="label_setting">Settings</string>
    <string name="label_alert">Alert</string>
    <string name="notif_camera_permission">App Requires Permission To Access Camera</string>
    <string name="notif_decline">Decline</string>
    <string name="notif_accept">Accept</string>
    <string name="notif_in_development">Still in Development Stage</string>
    <string name="notif_image_predict_not_picked">You Must Pick Predict Image from Gallery or Camera</string>
    <string name="text_positif"><![CDATA[You are <font color=#cc0029>Positive COVID</font>]]></string>
    <string name="text_negatif"><![CDATA[You are <font color=#00FF00>Negative COVID</font>]]></string>
    <string name="label_twenty_four_hours_oxygen">24 Hours</string>
    <string name="label_fourty_eight_hours_oxygen">48 Hours</string>
    <string name="label_seventy_two_hours_oxygen">72 Hours</string>
    <string name="label_ninety_six_hours_oxygen">96 Hours</string>
    <string name="label_analysis">Analysis</string>
    <string name="text_pneumonia">You Have Pneumonia</string>
    <string name="label_timestamp">dd LLLL yyy HH:mm:ss</string>
    <string name="label_help">Are You Confused About using This Application? You Can Follow the Method Below</string>
    <string name="label_help_title">How To Use?</string>
    <string name="label_first_step">Click the Predict menu below</string>
    <string name="label_second_step">Click the Select Image Button to Select an Available Photo or Click Photo with Camera if the Photo is Not Available in your Phone Gallery</string>
    <string name="label_step_third">Click Predict Button</string>
    <string name="label_step_fourth">Wait for a Moment</string>
    <string name="label_fifth_step">Information Regarding Your Covid Status will Appear</string>
    <string name="label_sixth">Click the Analyze Button to Find Out the Oxygen Strength Analysis</string>
    <string name="label_pamflet_covid">Pamphlet Covid</string>
    <string name="label_check_status">Let\'s Check your Status Covid in This App</string>

    <string-array name="percent_first_tier_oxygen">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>

    <string-array name="percent_second_tier_oxygen">
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
    </string-array>

    <string-array name="percent_third_tier_oxygen">
        <item>45%</item>
        <item>50%</item>
        <item>55%</item>
        <item>60%</item>
        <item>65%</item>
    </string-array>

    <string-array name="percent_fourth_tier_oxygen">
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
    </string-array>

</resources>