<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_20dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_app_logo"
            android:layout_marginTop="@dimen/margin_40dp"
            android:contentDescription="@string/splash_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:viewBindingIgnore="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginStart="@dimen/margin_10dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:cardBackgroundColor="@color/colorTopCardLogin"
            app:cardCornerRadius="@dimen/corner_radius_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_20dp"
                    android:text="@string/label_sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_30sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtEmailLoginLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:layout_marginEnd="@dimen/margin_30dp"
                        android:layout_marginTop="@dimen/margin_20dp"
                        android:layout_centerHorizontal="true"
                        app:hintEnabled="false"
                        app:errorEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etEmailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:paddingStart="@dimen/padding_5dp"
                            android:paddingEnd="@dimen/padding_5dp"
                            android:textColor="@color/colorHintLogin"
                            android:textSize="@dimen/text_size_15sp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/hint_email"
                            android:textColorHint="@drawable/edittext_selector"
                            android:drawableStart="@drawable/ic_email"
                            android:drawableTint="@android:color/black"
                            android:drawablePadding="@dimen/padding_20dp"
                            android:inputType="textEmailAddress"
                            tools:targetApi="m"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPassLoginLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:layout_marginEnd="@dimen/margin_30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/txtEmailLoginLayout"
                        app:errorEnabled="true"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPassLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_password"
                            android:drawablePadding="@dimen/padding_20dp"
                            android:drawableTint="@android:color/black"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/padding_5dp"
                            android:paddingEnd="@dimen/padding_5dp"
                            android:textColor="@color/colorHintLogin"
                            android:textColorHint="@drawable/edittext_selector"
                            android:textSize="@dimen/text_size_15sp"
                            app:backgroundTint="@android:color/darker_gray"
                            tools:targetApi="m" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:background="@color/colorTopCardLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_10dp"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:layout_marginEnd="@dimen/margin_30dp"
                        android:text="@string/label_login"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="@dimen/text_size_14sp"
                        android:layout_below="@+id/txtPassLoginLayout"/>

                    <TextView
                        android:id="@+id/viewLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_or"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_10dp"
                        android:layout_below="@+id/btnLogin"/>

                    <Button
                        android:id="@+id/btnGoogleLogin"
                        android:background="@drawable/button_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_10dp"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:layout_marginEnd="@dimen/margin_30dp"
                        android:text="@string/label_login_google"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/colorLoginGoogle"
                        android:textSize="@dimen/text_size_14sp"
                        android:drawableStart="@drawable/ic_google"
                        android:layout_below="@id/viewLogin"/>

                    <TextView
                        android:id="@+id/tvSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/margin_28dp"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:layout_marginEnd="@dimen/margin_30dp"
                        android:text="@string/label_register_button"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_bold"
                        android:layout_below="@+id/btnGoogleLogin"/>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/mainProgressbarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cardLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>