<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultPredictActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_background"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivImagePredict"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_190dp"
        android:padding="@dimen/padding_20dp"
        android:src="@drawable/ic_image_background_pick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:contentDescription="@string/label_choose_image" />

    <TextView
        android:id="@+id/tvPredictResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/label_no_data"
        android:textSize="@dimen/text_size_20sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@+id/ivImagePredict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnAnalysisPredict"
        android:background="@color/colorTopCardLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_18pt"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/label_analysis"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvPredictResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPredictResultServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/label_no_data"
        android:textSize="@dimen/text_size_20sp"
        android:fontFamily="@font/montserrat_bold"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/btnAnalysisPredict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>